0029782: Shape Healing - Reading of invalid shape